req05:feat: deixa fixo o header

--- a/news/templates/base.html
+++ b/news/templates/base.html
@@ -10,7 +10,11 @@
 </head>
 <body>
     <header class="header">
-        {% block header%} {% endblock %}
+        <nav>
+            <ul class="header-links">
+                <li><a href="{% url 'home-page' %}">Home</a></li>
+            </ul>
+        </nav>
     </header>
     <br>
     {% block content %} {% endblock %}
