--- a/news/templates/home.html
+++ b/news/templates/home.html
@@ -5,22 +5,18 @@
     Página Inicial
 {% endblock %}
 
-{% block header%}
-        <nav>
-            <ul class="header-links">
-                <li><a href="{% url 'home-page' %}">Home</a></li>
-            </ul>
-        </nav>
-{% endblock %}
-
 {% block content %}
-    <section class="news-container">
-        {% for new in news %}
-            <div class="news-card">
+<section class="news-container">
+    {% for new in news %}
+    <div class="news-card">
+        <a href="news/{{new.id}}">
+            <img src="{% static new.image.url %}" alt="{{new.image}}">
+            <div>
                 <h2 class="news-title">{{new.title}}</h2>
-                <img src="{% static new.image.url %}" alt="{{new.image}}">
                 <span class="news-date">{{new.created_at|date:"d/m/Y"}}</span>
             </div>
-        {% endfor %}
-    </section>
-{% endblock %}  
+        </a>
+    </div>
+    {% endfor %}
+</section>
+{% endblock %}
