--- a/news/templates/news_details.html
+++ b/news/templates/news_details.html
@@ -5,6 +5,15 @@
     Página de Detalhes da Notícia
 {% endblock %}
 
+{% block header %}
+    <header class="header">
+        <nav>
+            <ul class="header-links">
+                <li><a href="{% url 'home-page' %}">Home</a></li>
+            </ul>
+        </nav>
+    </header>
+{% endblock %}
 
 {% block content %}
 <div class="news-detail">
