--- a/news/templates/home.html
+++ b/news/templates/home.html
@@ -20,7 +20,9 @@
     {% for new in news %}
     <div class="news-card">
         <a href="news/{{new.id}}">
+            {% if new.image %}
             <img src="{% static new.image.url %}" alt="{{new.image}}">
+            {% endif %}
             <div>
                 <h2 class="news-title">{{new.title}}</h2>
                 <span class="news-date">{{new.created_at|date:"d/m/Y"}}</span>
